<resources>
    <string name="app_name">Foody</string>
    <string name="api_key">8feecd98f6a842b19d19542756b17fea</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipes_fragment">Favorites</string>
    <string name="food_joke">Joke</string>
    <string name="recipes">Recipes</string>
    <string name="favorites">Favorites</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="diet_type">Diet Type</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegan">Vegan</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="cheap">Cheap</string>
    <string name="healthy">Healthy</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="vegetarian">Vegetarian</string>
</resources>